# EasyRP

./: .clang-format  .cquery  .gitignore  .gitmodules  CMakeLists.txt  PreLoad.cmake  README.md  build.bat  build.sh  config.c  config.cpp  config.h  config.hpp  config.ini  discord.c  discord.cpp  discord.h  discord.hpp  easyRP.ahk  easyRP.ahk.bak  icons.txt  main.c  main.cpp  meson.build  parser.c  parser.h  readme.txt  show_exe (FAILSAFE).ahk
include/: discord-rpc.h
lib/: discord-rpc.lib
res/: EasyRP.rc
src/: discord.c  discord.h  main.c  parser.c  parser.h
